@@ -9116,10 +9116,9 @@ Unsetting
 .BR RANDOM ,
 .BR SECONDS ,
 .BR SRANDOM ,
-.BR TMOUT ,
 and
 .SM
-.B _
+.B TMOUT
 removes their special meaning even if they are
 subsequently assigned to.
 .TP
