@@ -312,6 +312,9 @@ void sh_assignok(Namval_t *np,int add)
 	save = sh.subshell;
 	sh.subshell = 0;
 	mp->nvname = np->nvname;
+	/* Copy value pointers for variables whose values are pointers into the static scope, sh.st */
+	if(!nv_isnonptr(np) && np->nvalue.cp >= (char*)&sh.st && np->nvalue.cp < (char*)&sh.st + sizeof(struct sh_scoped))
+		mp->nvalue = np->nvalue;
 	if(nv_isattr(np,NV_NOFREE))
 		nv_onattr(mp,NV_IDENT);
 	nv_clone(np,mp,(add?(nv_isnull(np)?0:NV_NOFREE)|NV_ARRAY:NV_MOVE));
